# assignment-tracker

./: api.yml
backend/: .dockerignore  .gitignore  .pnp.cjs  .sqlfluff  Cargo.toml  Dockerfile  api.yml  build-deploy.sh  docker-compose-db-only.yml  docker-compose.yaml  helper.ts  homeRoute.ts  index.js  index.ts  loginRoute.ts  mainRoute.ts  package.json  pageRoute.js  pageRoute.ts  run-tests.sh  setup-dev.sh  tsconfig.json
backend/.sqlx/: query-021ea74136cde617f9222a5b66abc0788d05cca80b03e6e71557049a213345f4.json  query-1a92e1bcb6bdea05f3c347777ca67205f33613f2eb148bed1e44de62c86622e7.json  query-1e4dcefda2bb2b0a9cdcfbee4f9b21d4b6c3e899808fece52fdd805d817701b5.json  query-265e23821cd1e9dac142ff7a536f98646264caa617c25e494e40ae5deceafe36.json  query-26b29e119ba02bd0953fd2409f7214fcb992386a0b33af70c706542d4d6a38e2.json  query-4093eefd930520d67598b750fb4b46aaae9841c21bd08759951e5ec199221d99.json  query-4b9801293cd419edf8c40f6cb15ea798057f0e1f219ad0ec84e89af0eec2af0e.json  query-62174516f67768f6cff6d6a839ea585eb345a6c226af7e8da231d827614efc17.json  query-699e53990033634f7d4911582c7fe9d8c758997c59ac4a6cb0bab695711514ee.json  query-6f278a510075eb3bd0a424c0a1a01eab98a5472313ba26dc725ea57889c41a0a.json  query-788a5b0542207321bb4ad63793e8f4f6610b08928569b6dad55a1aa49d462414.json  query-82e65297f433fa15288d06842ee0475c6dd537d6633acc288d109cc1f6c48014.json  query-863e6cc6ecf53e3dc641480d6b263e8370c9ef93e0702cc9db5c0159ac1f4b45.json  query-c45484d492261ae32927706104d0e84aca30f0ec8da902a49d2220c3bbc6b676.json  query-d2b5f17ec2253dc22a70c7647c71830889e23fa7771a5fbf2a9539da8ad8d069.json  query-e77ff703f4e74931b83b8c0c0e98d6c1f2d92006ae455242e07ac7f27e87cb66.json
backend/bindings/: Assignment.ts  ErrorResponse.ts  FieldError.ts  User.ts
backend/crates/server/: Cargo.toml
backend/crates/server/src/: logger.rs  main.rs
backend/crates/webserver/: Cargo.toml
backend/crates/webserver/src/: config.rs  json_extractor.rs  lib.rs
backend/crates/webserver/src/data_models/: assignment.rs
backend/crates/webserver/src/error_response/: common_errors.rs  mod.rs  serde_status_code.rs
backend/crates/webserver/src/routes/: create_assignment.rs  create_course.rs  create_session.rs  create_user.rs  delete_assignment.rs  delete_course.rs  delete_user.rs  (+7 more)
backend/crates/webserver/tests/: mod.rs  test_assignment_status.rs  test_config.rs  test_user_exists.rs  test_webserver_creation.rs
backend/database/: init.sql
backend/docker/: Dockerfile  docker-compose-test-db.yml  docker-compose-test.yml  docker-compose.yaml  docker-compose.yml
backend/migrations/: 1_tables.sql
backend/src/: error_response.rs  global.ts  index.ts  json_extractor.rs  lib.rs  logger.rs  main.rs  routes.rs  types.rs  utils.rs
backend/src/routes/: create_assignment.rs  create_course.rs  create_session.rs  create_user.rs  delete_assignment.rs  delete_course.rs  delete_session.rs  delete_user.rs  get_all_assignments.rs  get_all_courses.rs  get_user.rs  import_course.rs  mod.rs  update_assignment.rs  update_course.rs
backend/src/types/: course.rs  mod.rs  user.rs
backend/src/types/error_response/: common_errors.rs  field_error.rs  mod.rs
backend/src/utils/: PGErrors.ts  PluginConfig.ts
backend/src/webserver/: cors.rs  mod.rs  session.rs
backend/tests/: assignment_status.rs  config.rs  mod.rs  user_exists.rs  webserver_creation.rs
backend/tests/common/: body.rs  mod.rs  oneshot.rs
backend/tests/routes/: create_user.rs  mod.rs
(+99 files in other folders)
