[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }

chrono = "0.4" # Used for dating logs and naive times

log = "0.4"
thiserror = "1.0"

# Workspace library crates
webserver = { path = "crates/webserver" }

[profile.release]
strip = true
