[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }

argon2 = "0.5" # Password hashing

tokio = { workspace = true }
axum = { version = "0.7", features = ["macros", "http2"] }
tower = "0.5"                                              # Required for axum and tower ecosystem

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", default-features = false, features = [
	"runtime-tokio",
	"postgres",
	"json",
	"chrono",
	"uuid",
	"migrate",
	"macros",
] }

chrono = { workspace = true, features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

# Tower ecosystem: (cors, session management)
tower-http = { version = "0.6", features = ["cors"] }
tower-sessions = { version = "0.13" }
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }

[dev-dependencies]
temp-env = "0.3"       # Used to temporary environment in testing
http-body-util = "0.1" # Used to build and process bodies in testing
mime = "0.3"           # Used for content types during testing
